# big_button

./: README.MD  big_button_pico_pinout.ods
kiosk/: main.py
kiosk/lib/: webserver.py
server/backend/: Cargo.toml  README.MD  api_tests.http
server/backend/src/: main.rs  setup_database.rs
server/frontend/: package-lock.json  package.json  svelte.config.js
server/frontend/src/: app.html  stores.js
server/frontend/src/routes/: +layout.svelte  +page.js  +page.svelte  Header.svelte  styles.css
server/frontend/src/routes/about/: +page.svelte
server/frontend/src/routes/qotd/: +page.svelte
server/frontend/src/routes/qotd/[day]/: +page.svelte
