[package]
name = "big_button_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
actix-files = "0.6.5"
rusqlite = {version = "0.30.0", features = ["bundled","chrono"]}
serde = { version = "1.0", features = ["derive"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.23.0"
time = "0.3.32"
chrono = { version = "0.4.34",  features = ["serde"] }
http = "0.2.11"